--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ESD-Suit-Detection-using-TensorFlow.js",
+  "name": "yolov8-tfjs",
   "description": "Object detection application right in your browser using YOLOv8 and Tensorflow.js",
   "version": "1.0.0",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pergazuz/ESD-Suit-Detection-using-TensorFlow.js.git"
+    "url": "git+https://github.com/Hyuto/yolov8-tfjs.git"
   },
   "keywords": [
     "object detection",
@@ -22,9 +22,9 @@
   "author": "Wahyu Setianto",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/pergazuz/ESD-Suit-Detection-using-TensorFlow.js/issues"
+    "url": "https://github.com/Hyuto/yolov8-tfjs/issues"
   },
-  "homepage": "https://github.com/pergazuz/ESD-Suit-Detection-using-TensorFlow.js#readme",
+  "homepage": "https://github.com/Hyuto/yolov8-tfjs#readme",
   "dependencies": {
     "@tensorflow/tfjs": "^4.1.0",
     "normalize.css": "^8.0.1",
