--- a/package.json
+++ b/package.json
@@ -1,41 +1,27 @@
 {
-  "name": "yolov8-tfjs",
-  "description": "Object detection application right in your browser using YOLOv8 and Tensorflow.js",
-  "version": "1.0.0",
+  "name": "esd-suit-detection",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Hyuto/yolov8-tfjs.git"
-  },
-  "keywords": [
-    "object detection",
-    "yolov8",
-    "javascript",
-    "react",
-    "tensorflow.js"
-  ],
-  "author": "Wahyu Setianto",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Hyuto/yolov8-tfjs/issues"
-  },
-  "homepage": "https://github.com/Hyuto/yolov8-tfjs#readme",
   "dependencies": {
-    "@tensorflow/tfjs": "^4.1.0",
-    "normalize.css": "^8.0.1",
+    "@tensorflow/tfjs": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.24",
-    "@types/react-dom": "^18.0.8",
-    "@vitejs/plugin-react": "^2.2.0",
-    "gh-pages": "^5.0.0",
-    "vite": "^3.2.3"
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.0",
+    "eslint": "^8.53.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "vite": "^5.0.0"
   }
 }
